Fix tooltips breaking layout on mobile

--- a/public/css/components/common/_tooltip.css
+++ b/public/css/components/common/_tooltip.css
@@ -38,7 +38,7 @@
 }
 
 @media (max-width: 768px) {
-    .tooltip.show {
-        display: none;
+    .tooltip {
+        display: none !important;
     }
 }
